--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@
   width: 100%;
   height: 100%;
   z-index: 9999999;
-  background: url(../img/loader.gif) center no-repeat #ffffff;
+  background: url("./assets/img/loader.gif") center no-repeat #ffffff;
 }
 
 /*------------------------------------------------------------
