--- a/src/index.css
+++ b/src/index.css
@@ -5778,8 +5778,12 @@ footer.skin-dark-footer ul.footer-bottom-social li a:focus {
 
 .map-container {
   height: 400px;
+}
+.map {
   position: relative;
   width: 100%;
+  z-index: 888888;
+  height: 100%;
 }
 
 .zoom-buttons {
@@ -5791,10 +5795,17 @@ footer.skin-dark-footer ul.footer-bottom-social li a:focus {
 
 .lat-lng {
   position: absolute;
-  top: 10px;
+  bottom: 10px;
   z-index: 99999;
   left: 10px;
   background-color: #fff;
   padding: 5px;
   color: #000c35;
+}
+
+.search-form {
+  position: relative;
+  z-index: 99999;
+  margin: auto;
+  margin-top: 30px;
 }
